# erender

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  erender.apng  render.apng
assets/objects/spot/: spot_normal.tga
crates/magx/: Cargo.toml
crates/magx/src/: geom.rs  lib.rs  macro_utils.rs  matn.rs  vecn.rs
crates/rasterizer/: Cargo.toml
crates/rasterizer/src/: lib.rs  pipeline.rs  rasterizer.rs  shader.rs
crates/scene/: Cargo.toml
crates/scene/src/: camera.rs  lib.rs  light.rs  scene.rs
crates/scene/src/model/: asset.rs  mesh.rs  mod.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: lib.rs  viewer.rs
doc/games101/: 01 Overview of Computer Graphics.md  02 Review of Linear Algebra.md  03-04 Transformation.md  05-06 Rasterization.md  07-08-09 Shading.md  10-11-12 Geometry.md  13-14-15-16 Ray Tracing.md  17 Materials and Appearances.md  18 Advanced Topics in Rendering.md  19 Cameras Lenses and Light Fields.md  20 Color and Perception.md  21-22 Animation.md
src/: gpu_renderer.rs  main.rs  shader.wgsl  soft_renderer.rs
