[package]
name = "erender"
version = "0.2.0"
authors = ["yehuohan <yehuohan@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/magx",
    "crates/scene",
    "crates/rasterizer",
]

[dependencies]
magx = {path = "crates/magx"}
scene = {path = "crates/scene"}
rasterizer = {path = "crates/rasterizer"}
image = "0.23.12"
eframe = {version="0.24.*", features=["wgpu"]}
env_logger = "0.11.*"
log = "0.4.*"
